# quadruped_robot_reinforcement_learning

./: CMakeLists.txt  README.md  package.xml
include/: kinematics.h  trajectory_generator.h
launch/: complete_simulation.launch.py  gazebo_simulation.launch.py  rviz_display.launch.py
src/: gait_controller.cpp  joint_command_relay.cpp  kinematics.cpp  trajectory_generator.cpp
urdf/: testudog.urdf
